exports[`escape-case > invalid(1): a { content: \"\\a\\a9\\00a9\\1f600\\0000afaf\"; } 1`] = `

  1 | a { content: "\\a\\a9\\00a9\\1f600\\0000afaf"; }

`;

exports[`escape-case > invalid(1): a { content: \"\\a\\a9\\00a9\\1f600\\0000afaf\"; } 2`] = `

Message:
> 1 | a { content: "\\a\\a9\\00a9\\1f600\\0000afaf"; }
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use uppercase characters for the value of the escape sequence.

Output:
  1 | a { content: "\\A\\A9\\00A9\\1F600\\0000AFaf"; }

`;

exports[`escape-case > invalid(1): value: \"\\xaf\\u00af\\U000000af\" 1`] = `

  1 | value: "\\xaf\\u00af\\U000000af"

`;

exports[`escape-case > invalid(1): value: \"\\xaf\\u00af\\U000000af\" 2`] = `

Message:
> 1 | value: "\\xaf\\u00af\\U000000af"
    |        ^^^^^^^^^^^^^^^^^^^^^^ Use uppercase characters for the value of the escape sequence.

Output:
  1 | value: "\\xAF\\u00AF\\U000000AF"

`;

exports[`escape-case > invalid(2): .\\a9#\\e9 { --\\a9: url(\\e9.png); content: \"\\\\\\a9\"; } 1`] = `

  1 | .\\a9#\\e9 { --\\a9: url(\\e9.png); content: "\\\\\\a9"; }

`;

exports[`escape-case > invalid(2): .\\a9#\\e9 { --\\a9: url(\\e9.png); content: \"\\\\\\a9\"; } 2`] = `

Message:
> 1 | .\\a9#\\e9 { --\\a9: url(\\e9.png); content: "\\\\\\a9"; }
    |  ^^^ Use uppercase characters for the value of the escape sequence.

Output:
  1 | .\\A9#\\e9 { --\\a9: url(\\e9.png); content: "\\\\\\a9"; }

`;

exports[`escape-case > invalid(2): .\\a9#\\e9 { --\\a9: url(\\e9.png); content: \"\\\\\\a9\"; } 3`] = `

Message:
> 1 | .\\a9#\\e9 { --\\a9: url(\\e9.png); content: "\\\\\\a9"; }
    |     ^^^^^ Use uppercase characters for the value of the escape sequence.

Output:
  1 | .\\a9#\\E9 { --\\a9: url(\\e9.png); content: "\\\\\\a9"; }

`;

exports[`escape-case > invalid(2): .\\a9#\\e9 { --\\a9: url(\\e9.png); content: \"\\\\\\a9\"; } 4`] = `

Message:
> 1 | .\\a9#\\e9 { --\\a9: url(\\e9.png); content: "\\\\\\a9"; }
    |            ^^^^^ Use uppercase characters for the value of the escape sequence.

Output:
  1 | .\\a9#\\e9 { --\\A9: url(\\e9.png); content: "\\\\\\a9"; }

`;

exports[`escape-case > invalid(2): .\\a9#\\e9 { --\\a9: url(\\e9.png); content: \"\\\\\\a9\"; } 5`] = `

Message:
> 1 | .\\a9#\\e9 { --\\a9: url(\\e9.png); content: "\\\\\\a9"; }
    |                   ^^^^^^^^^^^^ Use uppercase characters for the value of the escape sequence.

Output:
  1 | .\\a9#\\e9 { --\\a9: url(\\E9.png); content: "\\\\\\a9"; }

`;

exports[`escape-case > invalid(2): .\\a9#\\e9 { --\\a9: url(\\e9.png); content: \"\\\\\\a9\"; } 6`] = `

Message:
> 1 | .\\a9#\\e9 { --\\a9: url(\\e9.png); content: "\\\\\\a9"; }
    |                                          ^^^^^^^ Use uppercase characters for the value of the escape sequence.

Output:
  1 | .\\a9#\\e9 { --\\a9: url(\\e9.png); content: "\\\\\\A9"; }

`;

exports[`escape-case > invalid(2): \"\\u00af\": \"\\xaf\" # preserve 1`] = `

  1 | "\\u00af": "\\xaf" # preserve

`;

exports[`escape-case > invalid(2): \"\\u00af\": \"\\xaf\" # preserve 2`] = `

Message:
> 1 | "\\u00af": "\\xaf" # preserve
    | ^^^^^^^^ Use uppercase characters for the value of the escape sequence.

Output:
  1 | "\\u00AF": "\\xaf" # preserve

`;

exports[`escape-case > invalid(2): \"\\u00af\": \"\\xaf\" # preserve 3`] = `

Message:
> 1 | "\\u00af": "\\xaf" # preserve
    |           ^^^^^^ Use uppercase characters for the value of the escape sequence.

Output:
  1 | "\\u00af": "\\xAF" # preserve

`;

exports[`escape-case > invalid(3): @\\6d edia all { a { content: \"\\a9\"; } } 1`] = `

  1 | @\\6d edia all { a { content: "\\a9"; } }

`;

exports[`escape-case > invalid(3): @\\6d edia all { a { content: \"\\a9\"; } } 2`] = `

Message:
> 1 | @\\6d edia all { a { content: "\\a9"; } }
    | ^^^^^^^^^ Use uppercase characters for the value of the escape sequence.

Output:
  1 | @\\6D edia all { a { content: "\\a9"; } }

`;

exports[`escape-case > invalid(3): @\\6d edia all { a { content: \"\\a9\"; } } 3`] = `

Message:
> 1 | @\\6d edia all { a { content: "\\a9"; } }
    |                              ^^^^^ Use uppercase characters for the value of the escape sequence.

Output:
  1 | @\\6d edia all { a { content: "\\A9"; } }

`;

exports[`escape-case > invalid(3): value: &anchor \"\\u00af\" 1`] = `

  1 | value: &anchor "\\u00af"

`;

exports[`escape-case > invalid(3): value: &anchor \"\\u00af\" 2`] = `

Message:
> 1 | value: &anchor "\\u00af"
    |                ^^^^^^^^ Use uppercase characters for the value of the escape sequence.

Output:
  1 | value: &anchor "\\u00AF"

`;

exports[`escape-case > invalid(4): a { content: \"/* \\a9 */\"; width: 1p\\78; } 1`] = `

  1 | a { content: "/* \\a9 */"; width: 1p\\78; }

`;

exports[`escape-case > invalid(4): a { content: \"/* \\a9 */\"; width: 1p\\78; } 2`] = `

Message:
> 1 | a { content: "/* \\a9 */"; width: 1p\\78; }
    |              ^^^^^^^^^^^ Use uppercase characters for the value of the escape sequence.

Output:
  1 | a { content: "/* \\A9 */"; width: 1p\\78; }

`;

exports[`escape-case > invalid(4): value: \"\\xAF\\u00AF\\U000000AF\" 1`] = `

Options:
- 'lowercase'

Code:
  1 | value: "\\xAF\\u00AF\\U000000AF"

`;

exports[`escape-case > invalid(4): value: \"\\xAF\\u00AF\\U000000AF\" 2`] = `

Message:
> 1 | value: "\\xAF\\u00AF\\U000000AF"
    |        ^^^^^^^^^^^^^^^^^^^^^^ Use lowercase characters for the value of the escape sequence.

Output:
  1 | value: "\\xaf\\u00af\\U000000af"

`;

exports[`escape-case > invalid(5): a { content: \"\\Aa\\1F600\"; } 1`] = `

Options:
- 'lowercase'

Code:
  1 | a { content: "\\Aa\\1F600"; }

`;

exports[`escape-case > invalid(5): a { content: \"\\Aa\\1F600\"; } 2`] = `

Message:
> 1 | a { content: "\\Aa\\1F600"; }
    |              ^^^^^^^^^^^ Use lowercase characters for the value of the escape sequence.

Output:
  1 | a { content: "\\aa\\1f600"; }

`;

exports[`escape-case > invalid(6): {'value': '\\xaf', /* \\u00af */ '\\u00af': 1} 1`] = `

  1 | {'value': '\\xaf', /* \\u00af */ '\\u00af': 1}

`;

exports[`escape-case > invalid(6): {'value': '\\xaf', /* \\u00af */ '\\u00af': 1} 2`] = `

Message:
> 1 | {'value': '\\xaf', /* \\u00af */ '\\u00af': 1}
    |           ^^^^^^ Use uppercase characters for the value of the escape sequence.

Output:
  1 | {'value': '\\xAF', /* \\u00af */ '\\u00af': 1}

`;

exports[`escape-case > invalid(6): {'value': '\\xaf', /* \\u00af */ '\\u00af': 1} 3`] = `

Message:
> 1 | {'value': '\\xaf', /* \\u00af */ '\\u00af': 1}
    |                                ^^^^^^^^ Use uppercase characters for the value of the escape sequence.

Output:
  1 | {'value': '\\xaf', /* \\u00af */ '\\u00AF': 1}

`;
